--- a/AsistenciaApp/Views/AgregarAsistenciaPage.xaml
+++ b/AsistenciaApp/Views/AgregarAsistenciaPage.xaml
@@ -1,5 +1,5 @@
 <Page
-    x:Class="AsistenciaApp.Views.AgregarAsistenciaPage"
+    x:Class="AsistenciaApp.Views.AgregarCalendarioPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:AsistenciaApp.Views"
